--- a/metadata.yaml
+++ b/metadata.yaml
@@ -20,6 +20,8 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Birds and Nature, Vol. VIII, No. 1, June 1990
 
   In Natural Colors'
